# ebs-python-internship-test

./: .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  start.sh
apps/blog/: tests.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/common/: helpers.py  middlewares.py  permissions.py  tests.py  urls.py  views.py
apps/common/fixtures/: users.json
apps/tasks/: factories.py  helpers.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/tasks/management/commands/: generate_tasks.py  generate_timelogs.py
apps/tasks/migrations/: 0001_initial.py  0002_alter_task_user.py  0002_auto_20230823_1700.py  0002_initial.py  0003_auto_20230830_1349.py  0003_task_user.py  0004_auto_20230824_1424.py  0004_comment_user.py  0005_alter_task_status.py
apps/users/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_auto_20230821_1958.py  0003_auto_20230823_1546.py
config/: settings.py  urls.py
